# tgbookhunter

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml
src/tgbookhunter/: __init__.py
src/tgbookhunter/application/services/: book_hunting_service.py
src/tgbookhunter/config/: logging.py  settings.py
src/tgbookhunter/domain/exceptions/: exceptions.py
src/tgbookhunter/domain/models/: cache.py  models.py  repository.py
src/tgbookhunter/domain/value_objects/: value_objects.py
src/tgbookhunter/infrastructure/: __init__.py
src/tgbookhunter/infrastructure/storage/: cache_repository.py  file_storage.py
src/tgbookhunter/infrastructure/telegram/: __init__.py  client.py
src/tgbookhunter/presentation/cli/: main.py  progress.py
tests/: conftest.py  test_cache_model.py  test_cache_repository.py  test_config.py  test_domain_models.py  test_domain_value_objects.py
